bug fix with side navigation on mobile

--- a/scss/theme/_mobile.scss
+++ b/scss/theme/_mobile.scss
@@ -313,7 +313,7 @@
 }
 
 /* Minimum width of 400 pixels. */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
 	
 	.hidemainlogo.hideMainNav .flickity-viewport, .flickity-viewport .gallery-cell {
 		height: 140px !important;
